<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Загадки для детей - отгадываем играя</string>
    
    <string name="a0_simpleBtn">Простая игра</string>
    <string name="a0_variantsBtn">С выбором ответа</string>
    <string name="a0_countdownBtn">Обратный отсчёт</string>
    <string name="a0_sandsBtn">Пески времени</string>
    <string name="a0_countdownChBx">Обратный отсчёт</string>
    
    <string name="a1_progressTV">Прогресс:</string>
    <string name="a1_levelTV">Уровень</string>
    <string name="a1_timeTV">00:00</string>
    <string name="a1_questionTV">Текст загадки</string>
    <string name="a1_answerTV">Текст ответа</string>
    <string name="a1_checkBtn">Проверить</string>
    <string name="a1_nextBtn">Дальше</string>
    
    <string name="a2_progressTV">Прогресс:</string>
    <string name="a2_levelTV">Уровень</string>
    <string name="a2_attemptsTV">Осталось попыток:</string>
    <string name="a2_questionTV">Текст загадки</string>
    <string name="a2_answerTV">Ответ:</string>
    <string name="a2_timeTV">00:00</string>
    
    <string name="message_true">Поздравляем!\nВы ответили верно.</string>
    <string name="message_false">Неверно!</string>
    <string name="message_gemeover">Поздравляем!\nВы отгадали все загадки.</string>
    <string name="gameover_dialog_okBtn">Я молодец!</string>
    <string name="message_no_attempts">У вас не осталось попыток.\nИгра окончена.</string>
    <string name="no_attempts_dialog_okBtn">Вернуться в меню</string>
    <string name="message_time_is_over">Ваше время вышло!</string>
    <string name="time_is_over_dialog_okBtn">В главное меню</string>

</resources>
